# compme

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Qfd.md  README.md  SECURITY.md
.codex/: loop-state.md
.gemini/: settings.json
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  docs.yml  release.yml
.opencode/plugins/: graphify.js
.serena/: project.yml
Casks/: compme.rb
crates/app/: Cargo.toml  config
crates/app/src/: about.rs  adapter.rs  builders.rs  config.rs  context_policy.rs  feature_policy.rs  inference.rs  lib.rs  loop_state.rs  main.rs  model_picker.rs  model_select.rs  run_loop.rs  screen_ocr.rs  settings_runtime.rs  setup_state.rs  status.rs  url_actions.rs  wiring.rs
crates/app/src/shell/: macos.rs  mod.rs  stub.rs
crates/app/tests/: config_startup.rs
crates/autocorrect/: Cargo.toml
crates/autocorrect/src/: lib.rs
crates/compat/: Cargo.toml
crates/compat/src/: lib.rs
crates/context/: Cargo.toml
crates/context/src/: lib.rs
crates/core/src/: lib.rs
crates/emoji/: Cargo.toml
crates/emoji/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine_core/: Cargo.toml
crates/engine_core/src/: lib.rs
crates/grammar/: Cargo.toml
crates/grammar/src/: lib.rs
crates/localize/: Cargo.toml
crates/localize/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/model_catalog/: Cargo.toml
crates/model_catalog/src/: lib.rs
crates/model_client/: Cargo.toml
crates/model_client/src/: lib.rs
crates/model_client/tests/: latency.rs  quality.rs
crates/model_fetch/: Cargo.toml
crates/model_fetch/src/: lib.rs
crates/personalization/: Cargo.toml
crates/personalization/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs  shell.rs
crates/platform_linux/: Cargo.toml
crates/platform_linux/src/: lib.rs
crates/platform_macos/: Cargo.toml
crates/platform_macos/examples/: accept_insert_acceptance.rs  accept_tap_acceptance.rs  caret_marker_acceptance.rs  input_monitoring_preflight_acceptance.rs  overlay_presenter_acceptance.rs  popup_fallback_acceptance.rs  textedit_observer_acceptance.rs
crates/platform_macos/src/: ax_worker.rs  keychain.rs  lib.rs  login_item.rs  settings_window.rs  shell_host.rs  tray.rs  ui_prompt.rs  url_events.rs
crates/platform_windows/: Cargo.toml
crates/platform_windows/src/: lib.rs
crates/prefs/: Cargo.toml
crates/prefs/src/: lib.rs
crates/ranker/: Cargo.toml
crates/ranker/src/: lib.rs
crates/redaction/: Cargo.toml
crates/redaction/src/: lib.rs
crates/shell_flags/: Cargo.toml
crates/shell_flags/src/: lib.rs
crates/stats/: Cargo.toml
crates/stats/src/: lib.rs
crates/textcase/: Cargo.toml
crates/textcase/src/: lib.rs
crates/thesaurus/: Cargo.toml
crates/thesaurus/src/: lib.rs
crates/webconfig/: Cargo.toml
crates/webconfig/examples/: sign_link.rs
crates/webconfig/src/: lib.rs
docs/: ACCEPTANCE.md  ARCHITECTURE.md  DEVELOPMENT.md  MANUAL-VALIDATION.md  RELEASE-NOTES-v0.1.0.md  RELEASE-NOTES-v0.1.1.md  RELEASE-NOTES-v0.1.2.md  RELEASING.md  ROADMAP.md  TROUBLESHOOTING.md  UI-ASSISTED-TEST-MATRIX.md
docs/superpowers/plans/: 2026-06-03-a0-spike-tdd.md  2026-06-03-a0-spike.md  2026-06-03-a1a-engine.md  2026-06-04-a1b-macos-adapter-contract.md  2026-06-04-plan-review-online-validation.md  2026-06-05-current-work-handoff.md  2026-07-07-cross-platform-foundation.md  2026-07-18-quality-and-release-gates.md  2026-07-19-audit-findings-remediation.md
docs/superpowers/specs/: 2026-06-03-cross-platform-review.md  2026-06-03-engine-macos-mvp-design.md  2026-06-03-prior-art-review.md  2026-06-06-p0-mvp-integration-design.md  2026-06-07-p1-mvp-quality-design.md  2026-06-09-a2-parity-design.md  2026-06-09-integration-phase-design.md  2026-06-10-a3-settings-ui-design.md  2026-07-01-grammar-fix-design.md  2026-07-08-cross-platform-implementation-plan.md
tools/acceptance/: e2e-complete-me.sh  missing-model-startup.sh  run-a1b-live-gates.sh  run-a2-compat-gates.sh  run-ui-assisted-session.sh
tools/acceptance/evidence/a2/v0.1.0-20260708-154651/: a2-compat-matrix-20260708-154651.tsv  stats.env
tools/bundle/: AppIcon.icns  Info.plist  bundle-smoke.sh  check-bundle-metadata.sh  make-app.sh  make-icon.sh  make-icon.swift
tools/dev/: check.sh  pre-push
tools/release/: check-a2-matrix-ledger.sh  check-agent-briefs.sh  check-github-governance.sh  check-model-client-features.sh  check-model-gates.sh  check-privacy-policy.sh  check-quality.sh  check-version-docs.sh  finalize-cask.sh  notarize-app.sh  quality-corpus.jsonl  run-model-gates.sh  update-cask.sh  validate-version.sh  write-update-manifest.sh
tools/spike/: Cargo.toml  FINDINGS.md  MANUAL-ACCEPTANCE.md
tools/spike/src/: lib.rs
tools/spike/tests/: model_integration.rs
