[workspace]
resolver = "2"
members = [
    "crates/platform",
    "crates/context",
    "crates/ranker",
    "crates/engine_core",
    "crates/personalization",
    "crates/redaction",
    "crates/prefs",
    "crates/memory",
    "crates/compat",
    "crates/model_client",
    "crates/platform_macos",
    "crates/engine",
    "crates/app",
]
exclude = ["tools/spike"]

[workspace.package]
license = "Apache-2.0"
