[workspace]
resolver = "2"
members = [
    "crates/platform",
    "crates/shell_flags",
    "crates/context",
    "crates/ranker",
    "crates/engine_core",
    "crates/personalization",
    "crates/redaction",
    "crates/prefs",
    "crates/memory",
    "crates/stats",
    "crates/webconfig",
    "crates/emoji",
    "crates/textcase",
    "crates/thesaurus",
    "crates/autocorrect",
    "crates/grammar",
    "crates/localize",
    "crates/compat",
    "crates/model_catalog",
    "crates/model_fetch",
    "crates/model_client",
    "crates/platform_macos",
    "crates/platform_windows",
    "crates/platform_linux",
    "crates/engine",
    "crates/app",
]
exclude = ["tools/spike"]

[workspace.package]
version = "0.1.5"
license = "Apache-2.0"

[workspace.dependencies]
getrandom = "0.4"
libc = "0.2"
zeroize = "1"
