[package]
name = "app"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "compme"
path = "src/main.rs"

[dependencies]
model_catalog = { path = "../model_catalog" }
model_fetch = { path = "../model_fetch" }
platform = { path = "../platform" }
platform_macos = { path = "../platform_macos" }
engine = { path = "../engine" }
model_client = { path = "../model_client" }
personalization = { path = "../personalization" }
prefs = { path = "../prefs" }
webconfig = { path = "../webconfig" }
context = { path = "../context" }
redaction = { path = "../redaction" }
memory = { path = "../memory" }
stats = { path = "../stats" }
compat = { path = "../compat" }
emoji = { path = "../emoji" }
autocorrect = { path = "../autocorrect" }
localize = { path = "../localize" }
core-foundation = "=0.10.1"
libc = "0.2"
