[package]
name = "app"
version = "0.1.5"
edition = "2021"
license.workspace = true

[[bin]]
name = "compme"
path = "src/main.rs"

[dependencies]
model_catalog = { path = "../model_catalog" }
model_fetch = { path = "../model_fetch" }
platform = { path = "../platform" }
engine = { path = "../engine" }
model_client = { path = "../model_client" }
personalization = { path = "../personalization" }
prefs = { path = "../prefs" }
webconfig = { path = "../webconfig" }
context = { path = "../context" }
redaction = { path = "../redaction" }
memory = { path = "../memory" }
stats = { path = "../stats" }
compat = { path = "../compat" }
emoji = { path = "../emoji" }
autocorrect = { path = "../autocorrect" }
grammar = { path = "../grammar" }
localize = { path = "../localize" }
thesaurus = { path = "../thesaurus" }
zeroize = "1"
getrandom = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
platform_macos = { path = "../platform_macos" }

[target.'cfg(windows)'.dependencies]
platform_windows = { path = "../platform_windows" }

[target.'cfg(target_os = "linux")'.dependencies]
platform_linux = { path = "../platform_linux" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
