[package]
name = "memory"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
redaction = { path = "../redaction" }
rusqlite = { version = "=0.40.1", features = ["bundled"] }
aes-gcm = { version = "=0.11.0", features = ["zeroize"] }
getrandom.workspace = true
zeroize.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
