[package]
name = "model_client"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
# Required by llama-cpp-2's `token_to_piece` signature (it takes an
# encoding_rs UTF-8 decoder) — not an independent choice.
encoding_rs = "0.8"
# ABI-sensitive FFI bindings to llama.cpp — pinned exact because even patch
# bumps can change the vendored C ABI/behavior. Backend features are target
# scoped: Metal on macOS, dynamic runtime-loaded backends elsewhere.

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "=0.1.146", default-features = false, features = ["metal"] }

# ponytail: static CPU-only llama off macOS until the real Windows/Linux
# adapters land (ROADMAP 1.1). "vulkan" needs the Vulkan SDK at build time
# (CI runners lack it); "dynamic-backends" hard-links shared backend libs in
# its build script with a racy !exists()→hard_link().unwrap() that panics
# AlreadyExists under CI (llama-cpp-sys-2 0.1.146 build.rs:1110). Re-add
# GPU/dynamic backends together with the adapters and CI SDK install steps.
[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = { version = "=0.1.146", default-features = false }

[dev-dependencies]
grammar = { path = "../grammar" }
