[package]
name = "platform_macos"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
accessibility-sys = "=0.2.0"
core-foundation = "=0.10.1"
core-graphics = { version = "=0.25.0", features = ["elcapitan"] }
dispatch2 = { version = "=0.3.1", default-features = false, features = ["std"] }
objc2 = "=0.6.4"
objc2-app-kit = "=0.3.2"
objc2-foundation = { version = "=0.3.2", features = ["NSValue", "NSAppleEventManager", "NSAppleEventDescriptor", "objc2-core-services"] }
platform = { path = "../platform" }
shell_flags = { path = "../shell_flags" }
objc2-service-management = { version = "=0.3.2", features = ["SMAppService"] }
security-framework = "=3.7.0"
security-framework-sys = "=2.17.0"
zeroize.workspace = true
