[package]
name = "platform_windows"
version = "0.1.0"
edition = "2021"
license.workspace = true

# SCAFFOLD (ROADMAP Tier 1.1). The PlatformAdapter contract is implemented as a
# fail-closed stub on every host so `cargo build/test --workspace` stays green on
# the macOS-only dev/CI environment this was authored in. The real UI Automation
# / WH_KEYBOARD_LL / SendInput implementation lands behind `#[cfg(windows)]` on a
# Windows build+test environment — its Windows-only dependencies go under a
# target table so non-Windows hosts never pull them:
#
#   [target.'cfg(windows)'.dependencies]
#   windows = { version = "...", features = [
#     "Win32_UI_Accessibility",            # UI Automation
#     "Win32_UI_Input_KeyboardAndMouse",   # WH_KEYBOARD_LL, SendInput
#     "Win32_Foundation", "Win32_UI_WindowsAndMessaging",
#   ] }

[dependencies]
platform = { path = "../platform" }

# Phase 0.2/0.3 (cross-platform plan 2026-07-08): owner-only DACL hardening +
# console ctrl handler are real already; the UIA/adapter deps stay commented
# until the full adapter lands.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_Console",
] }
