[package]
name = "platform_windows"
version.workspace = true
edition = "2021"
license.workspace = true

# SCAFFOLD (ROADMAP Tier 1.1). The PlatformAdapter contract is implemented as a
# fail-closed stub on every host so `cargo build/test --workspace` stays green on
# the macOS-only dev/CI environment this was authored in. The real UI Automation
# / WH_KEYBOARD_LL / SendInput implementation lands behind `#[cfg(windows)]` on a
# Windows build+test environment — the target table below already exists for the
# Phase-0 host services; the full adapter extends its feature list with
# "Win32_UI_Accessibility" (UIA), "Win32_UI_Input_KeyboardAndMouse"
# (WH_KEYBOARD_LL, SendInput), and "Win32_UI_WindowsAndMessaging".

[dependencies]
platform = { path = "../platform" }

# Phase 0.2/0.3 host services and native ShellExecuteW URL launching are real
# already. The full UIA adapter extends this target-specific feature set.
[target.'cfg(windows)'.dependencies]
windows = { version = "=0.61.3", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_Console",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
