[package]
name = "spike"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
llama-cpp-2 = { version = "=0.1.146", features = ["metal"] }
objc2 = "=0.6.4"
objc2-app-kit = "=0.3.2"
objc2-foundation = "0.3"
accessibility-sys = "=0.2.0"
core-foundation = "=0.10.1"
core-graphics = "=0.25.0"

[lib]
name = "spike"
path = "src/lib.rs"

[[bin]]
name = "p1_build"
path = "src/bin/p1_build.rs"

[[bin]]
name = "p2_infer"
path = "src/bin/p2_infer.rs"
