[package]
name = "spike"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
llama-cpp-2 = { version = "=0.1.146", default-features = false, features = ["metal"] }
encoding_rs = "0.8"
objc2 = "=0.6.4"
objc2-app-kit = "=0.3.2"
objc2-foundation = "=0.3.2"
accessibility-sys = "=0.2.0"
core-foundation = "=0.10.1"
core-graphics = "=0.25.0"

[lib]
name = "spike"
path = "src/lib.rs"

[[bin]]
name = "p1_build"
path = "src/bin/p1_build.rs"

[[bin]]
name = "p2_infer"
path = "src/bin/p2_infer.rs"

[[bin]]
name = "p2_model_compare"
path = "src/bin/p2_model_compare.rs"

[[bin]]
name = "p3_axread"
path = "src/bin/p3_axread.rs"

[[bin]]
name = "p4_caret"
path = "src/bin/p4_caret.rs"

[[bin]]
name = "p5_tap"
path = "src/bin/p5_tap.rs"

[[bin]]
name = "p5_twotap"
path = "src/bin/p5_twotap.rs"

[[bin]]
name = "p6_overlay"
path = "src/bin/p6_overlay.rs"

[[bin]]
name = "p7_smoke"
path = "src/bin/p7_smoke.rs"

[[bin]]
name = "p8_carbon_hotkey"
path = "src/bin/p8_carbon_hotkey.rs"
